login non funzionante

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -16,7 +16,7 @@ spring.datasource.platform=postgres
 spring.jpa.show-sql=true
 logging.level.org.hibernate.SQL=debug
 logging.level.org.hibernate.type.descriptor.sql=trace
-#spring.jpa.hibernate.ddl-auto=create
+spring.jpa.hibernate.ddl-auto=create
 spring.datasource.driver-class-name=org.postgresql.Driver
 spring.datasource.url=jdbc:postgresql://localhost/silph
 spring.jpa.properties.hibernate.temp.use_jdbc_metadata_defaults= false
@@ -32,3 +32,16 @@ server.error.include-stacktrace=always
 #=Misc configuration
 #==================================
 spring.messages.basename=messages/validation
+#==================================
+#=Oauth2 configuration
+#==================================
+security.oauth2.client.clientId=2298954763686281
+#security.oauth2.client.clientId=233668646673605
+security.oauth2.client.clientSecret=33b17e044ee6a4fa383f46ec6e28ea1d
+security.oauth2.client.accessTokenUri=https://graph.facebook.com/oauth/access_token
+security.oauth2.client.userAuthorizationUri=https://www.facebook.com/dialog/oauth
+security.oauth2.client.tokenName=oauth_token
+security.oauth2.client.authenticationScheme=query
+security.oauth2.client.clientAuthenticationScheme=form
+security.oauth2.resource.userInfoUri=https://graph.facebook.com/me
+spring.main.allow-bean-definition-overriding=true
