--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -16,7 +16,7 @@ spring.datasource.platform=postgres
 spring.jpa.show-sql=true
 logging.level.org.hibernate.SQL=debug
 logging.level.org.hibernate.type.descriptor.sql=trace
-spring.jpa.hibernate.ddl-auto=create
+#spring.jpa.hibernate.ddl-auto=create
 spring.datasource.driver-class-name=org.postgresql.Driver
 spring.datasource.url=jdbc:postgresql://localhost/silph
 spring.jpa.properties.hibernate.temp.use_jdbc_metadata_defaults= false
@@ -45,3 +45,5 @@ security.oauth2.client.authenticationScheme=query
 security.oauth2.client.clientAuthenticationScheme=form
 security.oauth2.resource.userInfoUri=https://graph.facebook.com/me
 spring.main.allow-bean-definition-overriding=true
+security.oauth2.client.preEstablishedRedirectUri=http://localhost:8080/Gallery
+security.oauth2.client.useCurrentUri=false
