--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -37,5 +37,7 @@ spring.messages.basename=messages/validation
 #==================================
 #security.oauth2.client.clientId=2298954763686281
 #security.oauth2.client.clientSecret=1a2830c2e2e3b11284ed5fc85fdad34f
-#spring.security.oauth2.client.registration.facebook.client-id=2298954763686281
-#spring.security.oauth2.client.registration.facebook.client-secret=1a2830c2e2e3b11284ed5fc85fdad34f
+spring.security.oauth2.client.registration.google.client-id=504741965055-mc9068dp7qckem4i8mk07e5n6jjtepuj.apps.googleusercontent.com
+spring.security.oauth2.client.registration.google.client-secret=rtnXqTbiwFHLL2YF-qnfIpgW
+spring.security.oauth2.client.registration.facebook.client-id=2298954763686281
+spring.security.oauth2.client.registration.facebook.client-secret=1a2830c2e2e3b11284ed5fc85fdad34f
