--- a/src/main/resources/messages/validation.properties
+++ b/src/main/resources/messages/validation.properties
@@ -1,7 +1,6 @@
 required.request.customerName = Mandatory Field
 required.request.customerSurname = Mandatory Field
 required.request.customerEmail = Mandatory Field
-invalidPhotographerId.photo.photographer = Not a valid photographer's ID
 required.photo.name = Mandatory Field
 required.photo.imagePath = Mandatory Field
-required.photo.photographer = Mandatory Field
+required.photo.phId = Not Valid
