--- a/src/main/resources/messages/validation.properties
+++ b/src/main/resources/messages/validation.properties
@@ -4,3 +4,5 @@ required.request.customerEmail = Mandatory Field
 required.photo.name = Mandatory Field
 required.photo.imagePath = Mandatory Field
 required.photo.phId = Not Valid
+required.photographer.name = Mandatory Field
+required.photographer.surname = Mandatory Field
