validator del album quasi finito

--- a/src/main/resources/messages/validation.properties
+++ b/src/main/resources/messages/validation.properties
@@ -6,3 +6,6 @@ required.photo.imagePath = Mandatory Field
 required.photo.phId = Not Valid
 required.photographer.name = Mandatory Field
 required.photographer.surname = Mandatory Field
+required.album.name = Mandatory Field
+required.album.description = Mandatory Field
+required.album.imagePath = Mandatory Field
