AlbumPhotoValidator e un po di suppresswarning

--- a/src/main/resources/messages/validation.properties
+++ b/src/main/resources/messages/validation.properties
@@ -9,3 +9,5 @@ required.photographer.surname = Mandatory Field
 required.album.name = Mandatory Field
 required.album.description = Mandatory Field
 required.album.imagePath = Mandatory Field
+required.albumphoto.idAlbum = Mandatory Field
+required.albumphoto.idPhoto = Mandatory Field
